# TurtleBot_MazeMappingProject

./: .gitignore  shortcuts.txt
lab2/: package.xml
lab2/src/: lab2.py  lab2_robotlaunch.launch  lab2_simlaunch.launch
lab3/: frames.gv  package.xml
lab3/launch/: lab3_simlaunch.launch
lab3/rviz/: RBE3002_lab3.rviz
lab3/src/: path_planner.py  path_planner_client.py
lab4/: CMakeLists.txt  package.xml
lab4/configs/: config1.rviz  gmapping_params.yaml
lab4/launch/: amcl copy.launch  amcl.launch  amcl_local.launch  lab4_launch.launch  practice2.launch  practice_exploration.launch  turtlebot3_gmapping.launch
lab4/maps/: final_map.pgm  final_map.yaml  maze1_map.pgm  maze1_map.yaml  phase1_mapsaverTest.pgm  phase1_mapsaverTest.yaml
lab4/rviz/: config1.rviz  rbe3002_lab4.rviz
lab4/src/: frontier_node.py  frontier_node_client copy.py  frontier_node_client.py  path_planner.py  path_planner_client.py  phase3_amcl.py
lab4/srv/: Cspace.srv
